# cybergear

./: .can.example  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
advanced/: index.html
changelog/: index.html
control-modes/: index.html
docs/: advanced.md  control-modes.md  examples.md  feedback.md  getting-started.md  index.md  protocol.md
examples/: index.html
feedback/: index.html
getting-started/: index.html
protocol/: index.html
search/: search_index.json
src/cybergear/: __init__.py  can_definitions.py  cybergear.py  exceptions.py
src/cybergear/cli/: dashboard.py  scan.py
tests/: test_cybergear.py  test_hardware.py  test_integration.py  test_unit.py  test_virtual_can.py
